# advanced-financial-economics

./: CNAME  pyproject.toml
.github/workflows/: update_page.yaml
code/: afe_1.xlsx
code/series1/: retrieve_data.py
series_md/: series_1.md  series_2.md
site/: evidence.config.yaml  package-lock.json  package.json
site/.evidence/customization/: .profile.json
site/pages/: index.md
site/queries/: series_1.sql
site/sources/series/: connection.yaml  series_1.csv  series_1.sql
tex/: series_2_submission.tex
