[project]
name = "code"
version = "0.1.0"
description = "Advanced Financial Economics"
readme = "README.md"
dependencies = [
    "data-wrangler>=0.0.3",
    "ipykernel>=6.29.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.241126",
    "requests>=2.32.3",
    "wbgapi>=1.0.12",
    "yfinance>=0.2.54",
]
